--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "g": "^2.0.1",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "sequelize": "5.21",
