--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
-    "sequelize": "5.21",
+    "sequelize": "^5.22.5",
     "sequelize-cli": "^6.4.1"
   }
 }
